# fifi

./: CMakeLists.txt  README.md
shaders/: basic.vert
src/: main.cpp
src/core/: DebugLog.h  Window.h
src/math/: Mat4.h  Quaternion.h  Vec3.h
src/physics/: PhysicsWatchdog.h  PhysicsWorld.h  RigidBody.h
src/physics/Collision/: BroadPhase.h  Collider.h  ContactGenerator.h  ContactManifold.h  ContactResolver.h  GJK.h  SAT.h
src/renderer/: Camera.h  DebugOverlay.h  LineRenderer.h  Mesh.h  Shader.h
